k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atmosphere
  namespace: ecosync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atmosphere
  template:
    metadata:
      labels:
        app: atmosphere
    spec:
      containers:
      - name: atmosphere
        image: sahilll22/ecosync:atmosphere-32
        ports:
        - containerPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecosystem
  namespace: ecosync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecosystem
  template:
    metadata:
      labels:
        app: ecosystem
    spec:
      containers:
      - name: ecosystem
        image: sahilll22/ecosync:ecosystem-32
        ports:
        - containerPort: 3002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thermal
  namespace: ecosync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thermal
  template:
    metadata:
      labels:
        app: thermal
    spec:
      containers:
      - name: thermal
        image: sahilll22/ecosync:thermal-32
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: ecosync
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: sahilll22/ecosync:gateway-32
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: ecosync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: sahilll22/ecosync:web-32
        ports:
        - containerPort: 5173
